--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  width: 1200px;
+  padding: 0 -15px;
+}
+
+.col-4 {
+  width: 33.33%;
+  padding: 15px;
+}
+
+.row {
+  display: flex;
+  flex-wrap:wrap ;
+  margin: 0 -15px;
+  row-gap: 15px;
+}
+.move-img {
+  width: 100%;
+  object-fit: cover;
+}
