--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,18 @@ code {
 }
 
 .container {
-  width: 1200px;
+ max-width: 1280px;
   padding: 0 -15px;
+  margin: 0 auto;
 }
 
 .col-4 {
   width: 33.33%;
+  padding: 15px;
+}
+
+.col-3 {
+  width: 25%;
   padding: 15px;
 }
 
@@ -33,7 +39,43 @@ code {
   margin: 0 -15px;
   row-gap: 15px;
 }
-.move-img {
+img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
+}
+button {
+  cursor: pointer;
+}
+body {
+  background-color: black;
+}
+h3,p {
+  color: white;
+}
+.move-box {
+  background-color: darkgray;
+  border-radius: 17px;
+  padding-bottom: 10px;
+ text-align: center;
+}
+
+.Crosel {
+  width: 100vh;
+  margin-bottom:24px ;
+}
+a {
+  text-decoration: none;
+}
+
+.But {
+  background-color: grey;
+  padding: 15px 18px;
+  margin: 80px 5px;
+  border-radius: 17px;
+}
+.But:hover {
+  background-color: white;
+  transition: 0.7s;
+  color: black;
 }
