--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,11 @@ code {
   padding: 0 -15px;
   margin: 0 auto;
 }
+.col-6 {
+  width: 50%;
+  padding: 0 15px;
+}
+
 
 .col-4 {
   width: 33.33%;
@@ -36,8 +41,9 @@ code {
 .row {
   display: flex;
   flex-wrap:wrap ;
-  margin: 0 -15px;
+  margin: 100px 15px;
   row-gap: 15px;
+
 }
 img {
   width: 100%;
@@ -53,11 +59,34 @@ body {
 h3,p {
   color: white;
 }
+h3 {
+  font-size: 30px;
+}
+h2 {
+  color: white;
+}
+span {
+  color: white;
+  width: 550px;
+}
+
+.inner-box {
+  width: 500px;
+}
+
+.imgshka {
+  width: 100%;
+  height: 100%;
+}
+
 .move-box {
   background-color: darkgray;
   border-radius: 17px;
   padding-bottom: 10px;
- text-align: center;
+  text-align: center;
+}
+.movie-img {
+  max-width: 300px;
 }
 
 .Crosel {
@@ -73,6 +102,7 @@ a {
   padding: 15px 18px;
   margin: 80px 5px;
   border-radius: 17px;
+  height: 100%;
 }
 .But:hover {
   background-color: white;
@@ -87,5 +117,34 @@ a {
   color: #fff;
   margin-left: 15px;
   font-size: 25px;
-
 }
+
+.search {
+  color: #fff;
+  font-size: 27px;
+  margin: 25px ;
+}
+
+.SearhButton {
+  color: black ;
+  background-color: grey;
+  padding: 8px 10px;
+  border-radius: 14px;
+}
+.input {
+  padding:10px 11px;
+  border-radius: 10px;
+}
+
+.Vives{
+  background-color: yellow;
+  border-radius: 10px;
+  padding: 10px 11px;
+  border: none;
+}
+.hed-navigation {
+  padding:25px 0
+}
+
+
+
